# Extra-o_python_api

./: apimeals.py  apiplaceholder.py  bancodedados.py  main.py  pyproject.toml  readme.md
