[tool.poetry]
name = "extracao-python-api"
version = "0.1.0"
description = ""
authors = ["Wesley Santos <wsinformatica02@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
requests = "^2.32.3"
ipykernel = "^6.29.5"
streamlit = "^1.45.0"
sqlalchemy = "^2.0.40"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
